2000-06-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/util.c: introduced a unique identifer prefix for util
	functions.

	* tools/dump-jax.c: fixed some compiler warnings.

	* lib/parser-smi.y: fixed some compiler warnings.
	
	* lib/parser-smi.y: adjusted lines of definition in cases of
	forward references.

	* lib/data.c (freeData): fixed a misplaced free() that caused
	endless loops.

	* mibs/ietf/: removed RFC-1213 and fixed some modules to
	import RFC1213-MIB instead of RFC-1213.

2000-06-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* configure.in: added dmalloc option.

	* lib/util.c (timegm): fixed access to freed memory. Thanks
	to Bill Fenner.

2000-06-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smistrip.in: patch to strip modules from I-Ds.

	* lib/parser-smi.y: added checks for range restrictions applied
	to enumeration types.

	* test/: adjusted LIBSMI-TEST-* mibs and dumps/ files to
	satisfy the test suite.
	
	* lib/parser-smi.y: fixed crashes in case of lowercase identifier
	DEFVALs for objects that are neither enums nor oids. Thanks to
	Bill Fenner.

	* lib/parser-smi.y (checkObjects): fixed crashes in case of
	unknown oids.

	* lib/smi.c (smiGetNextNode): fixed segfault caused by missing
	modules.

	* tools/dump-jax.c (dumpScalars): fixed setScalar OID check.
	Thanks to Bill Rizzi.

2000-06-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/: minor patches from Juergen.

	* tools/dump-types.c: dumping also implicit types.

	* mibs/ietf/ and mibs/iana: various MIB module updates.

	* mibs/ietf/RMON-MIB: updated RMON-MIB (RFC 2819).

2000-06-02  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y (checkObjects): fixed endless loop, as
	occuring in original Modem-MIB for mdmMIB (RFC 1696).

	* mibs/ietf/: added FIBRE-CHANNEL-FE-MIB.

2000-05-30  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Juergen added code for checks of inherited
	types.

2000-05-26  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
