@@ -1,5 +1,8 @@
 2000-06-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
+	* lib/data.c: Juergen refined the conditional expensive checks
+	for identifier redefinitions.
+
 	* lib/util.c: introduced a unique identifer prefix for util
 	functions.
 
